# reVX

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  README.rst  api.html  conda_build.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.md  feature_request.yaml  installation_issue.yaml
.github/linters/: .python-lint
.github/workflows/: codecov.yml  conda_build.yml  gh-pages.yml  publish_to_pypi.yml  pull_request_flicker_tests.yml  pull_request_tests.yml
_autosummary/: reVX.cli.html  reVX.config.html  reVX.config.least_cost_xmission.DryCostCreatorConfig.html  reVX.config.least_cost_xmission.LeastCostPathsConfig.html  reVX.config.least_cost_xmission.LeastCostXmissionConfig.html  reVX.config.least_cost_xmission.html  reVX.config.offshore.AssemblyAreasConfig.html  reVX.config.offshore.DistToPortsConfig.html  reVX.config.offshore.OffshoreInputsConfig.html  reVX.config.offshore.html  reVX.config.reeds.ClassifyConfigGroup.html  reVX.config.reeds.ProfilesConfigGroup.html  reVX.config.reeds.ReedsConfig.html  reVX.config.reeds.TimeslicesConfigGroup.html  reVX.config.reeds.html  reVX.config.rpm.ClusterConfigGroup.html  reVX.config.rpm.RPMConfig.html  reVX.config.rpm.RepProfilesConfigGroup.html  reVX.config.rpm.html  reVX.config.transmission_layer_creation.BarrierLayers.html  reVX.config.transmission_layer_creation.CombineCosts.html  reVX.config.transmission_layer_creation.DryCosts.html  reVX.config.transmission_layer_creation.FBLayerConfig.html  reVX.config.transmission_layer_creation.FrictionLayers.html  reVX.config.transmission_layer_creation.LayerBuildComponents.html  reVX.config.transmission_layer_creation.LayerBuildConfig.html  reVX.config.transmission_layer_creation.LayerConfig.html  reVX.config.transmission_layer_creation.LayerCreationConfig.html  reVX.config.transmission_layer_creation.Layers.html  reVX.config.transmission_layer_creation.MergeFrictionBarriers.html  reVX.config.transmission_layer_creation.RangeConfig.html  reVX.config.transmission_layer_creation.Rasterize.html  reVX.config.transmission_layer_creation.TransmissionLayerCreationConfig.html  reVX.config.transmission_layer_creation.WetCosts.html  reVX.config.transmission_layer_creation.html  reVX.config.turbine_flicker.TurbineFlickerConfig.html  reVX.config.turbine_flicker.html  reVX.config.wind_dirs.MeanWindDirsConfig.html  reVX.config.wind_dirs.ProminentWindDirsConfig.html  reVX.config.wind_dirs.html  (+279 more)
_cli/: cli.html  dry-cost-creator.html  least-cost-paths.html  least-cost-xmission.html  mean-wind-dirs.html  offshore-assembly-areas.html  offshore-dist-to-ports.html  offshore-inputs.html  plexos-plants.html  prominent-wind-dirs.html  reV-plexos.html  reV-rpm.html  reVX.html  setbacks.html  simple-plant-builder.html  transmission-layer-creator.html  turbine-flicker.html
_modules/: index.html
_modules/rex/: outputs.html
_sources/: api.rst.txt
_sources/_autosummary/: reVX.cli.rst.txt  reVX.config.least_cost_xmission.DryCostCreatorConfig.rst.txt  reVX.config.least_cost_xmission.LeastCostPathsConfig.rst.txt  reVX.config.least_cost_xmission.LeastCostXmissionConfig.rst.txt  reVX.config.least_cost_xmission.rst.txt  reVX.config.offshore.AssemblyAreasConfig.rst.txt  reVX.config.offshore.DistToPortsConfig.rst.txt  reVX.config.offshore.OffshoreInputsConfig.rst.txt  reVX.config.offshore.rst.txt  reVX.config.reeds.ClassifyConfigGroup.rst.txt  reVX.config.reeds.ProfilesConfigGroup.rst.txt  reVX.config.reeds.rst.txt  (+307 more)
_static/: documentation_options.js
conda.recipe/: meta.yaml
docs/: Makefile  README.md  make.bat  requirements.txt
examples/: README.rst
misc/: examples.html  examples.reeds.html  examples.rpm.html  examples.setbacks.html  examples.transmission.html  installation.html  installation_usage.html  misc.html
reVX/: __init__.py  cli.py  reVX.cli.html  reVX.config.html  reVX.config.mean_wind_dirs.html  reVX.config.prominent_wind_dirs.html  reVX.config.reeds.html  reVX.config.rpm.html  reVX.config.wind_dirs.html  reVX.config.wind_setbacks.html  reVX.handlers.database.html  reVX.handlers.geotiff.html  reVX.handlers.html  reVX.handlers.outputs.html  reVX.handlers.sc_points.html  reVX.html  reVX.plexos.dpv_plexos.html  reVX.plexos.html  reVX.plexos.plexos_plants.html  reVX.plexos.plexos_plants_cli.html  reVX.plexos.rev_reeds_plexos.html  reVX.plexos.rev_reeds_plexos_cli.html  reVX.plexos.utilities.html  reVX.red_e.html  reVX.red_e.tech_potential.html  reVX.reeds.html  reVX.reeds.reeds_classification.html  reVX.reeds.reeds_cli.html  reVX.reeds.reeds_profiles.html  reVX.reeds.reeds_timeslices.html  reVX.rpm.html  reVX.rpm.rpm_cli.html  reVX.rpm.rpm_clusters.html  reVX.rpm.rpm_manager.html  reVX.rpm.rpm_output.html  reVX.utilities.cluster_methods.html  reVX.utilities.exceptions.html  reVX.utilities.exclusions_converter.html  reVX.utilities.forecasts.html  reVX.utilities.html  (+14 more)
reX/: __init__.py  version.py
tests/: test_assembly_areas.py  test_classification.py  test_dist_to_ports.py  test_exclusions_converter.py  test_fix_sc_lat_lon.py  test_forecasts.py  test_geotiff.py  test_hybrid_stats.py  test_layered_h5.py  test_mean_wind_dirs.py  test_offshore_inputs.py  test_plexos_aggregation.py  test_plexos_data_cleaner.py  test_plexos_data_utilities.py  test_plexos_dpv.py  test_plexos_node.py  test_plexos_plants.py  test_prominent_wind_dirs.py  test_rede.py  test_reeds.py  test_reeds_cols.py  test_region_classifier.py  test_regulations.py  test_resource.py  test_rev_reeds_plexos.py  test_rev_reeds_pras.py  test_rpm.py  test_setbacks.py  test_simple_plant_builder.py  test_temporal_agg.py  test_turbine_flicker.py  test_utilities.py  test_wind_dirs.py  test_x_mission_cost_creator.py  test_x_mission_costs.py  test_xmission_barrier_friction_builder.py  test_xmission_cost_creator.py  test_xmission_dry_cost_creator.py  test_xmission_dry_cost_creator.py.old  test_xmission_forced_inclusions.py  (+12 more)
(+680 files in other folders)
